parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    KEYWORD
    K_EXIT
    K_READ_DOUBLE
    K_READ_STRING
    PERIOD

Grammar

Rule 0     S' -> program
Rule 1     program -> K_PROGRAM ID LCURLY program_body RCURLY
Rule 2     program_body -> program_body program_body
Rule 3     program_body -> function
Rule 4     program_body -> procedure
Rule 5     program_body -> epsilon
Rule 6     type -> K_INTEGER
Rule 7     type -> K_DOUBLE
Rule 8     type -> K_STRING
Rule 9     function_statements -> function_statements function_statements
Rule 10    function_statements -> statements
Rule 11    function_statements -> procedure
Rule 12    scope -> epsilon
Rule 13    function -> K_FUNCTION scope type ID LPAREN parameter_list RPAREN LCURLY function_statements RCURLY
Rule 14    procedure -> K_PROCEDURE scope ID LPAREN parameter_list RPAREN LCURLY statements RCURLY
Rule 15    parameter -> type ID
Rule 16    parameter -> type ID LBRACKET RBRACKET
Rule 17    parameter_list -> parameter_list COMMA parameter_list
Rule 18    parameter_list -> parameter
Rule 19    value -> ICONSTANT
Rule 20    value -> DCONSTANT
Rule 21    value -> SCONSTANT
Rule 22    value -> ID
Rule 23    value -> ID LBRACKET value RBRACKET
Rule 24    parameter -> epsilon
Rule 25    statements -> statements statements
Rule 26    statements -> declare SEMI
Rule 27    statements -> declare_assign SEMI
Rule 28    statements -> assign SEMI
Rule 29    statements -> print
Rule 30    statements -> while
Rule 31    statements -> do
Rule 32    statements -> if
Rule 33    statements -> read
Rule 34    statements -> function_call SEMI
Rule 35    statements -> return SEMI
Rule 36    statement -> declare SEMI
Rule 37    statement -> declare_assign SEMI
Rule 38    statement -> assign SEMI
Rule 39    statement -> print
Rule 40    statement -> function_call SEMI
Rule 41    statement -> read
Rule 42    statement -> return SEMI
Rule 43    statements -> epsilon
Rule 44    declare -> type ID
Rule 45    declare -> type ID LBRACKET ID RBRACKET
Rule 46    declare -> type ID LBRACKET ICONSTANT RBRACKET
Rule 47    declare -> type factor COMMA factor COMMA factor
Rule 48    declare -> type factor COMMA factor
Rule 49    declare -> declare COMMA ID
Rule 50    declare -> declare COMMA assign
Rule 51    assign -> ID ASSIGN value
Rule 52    assign -> ID inc_dec
Rule 53    assign -> ID ASSIGN math
Rule 54    assign -> ID LBRACKET math RBRACKET ASSIGN math
Rule 55    assign -> ID LBRACKET math RBRACKET ASSIGN SCONSTANT
Rule 56    assign -> ID ASSIGN function_call
Rule 57    assign -> ID ASSIGN_PLUS math
Rule 58    assign -> ID ASSIGN_MINUS math
Rule 59    assign -> ID ASSIGN_MULTIPLY math
Rule 60    assign -> ID ASSIGN_DIVIDE math
Rule 61    assign -> ID ASSIGN_MOD math
Rule 62    assign -> assign ASSIGN value
Rule 63    declare_assign -> type ID ASSIGN value
Rule 64    declare_assign -> declare_assign COMMA ID
Rule 65    print -> K_PRINT_INTEGER LPAREN value RPAREN SEMI
Rule 66    print -> K_PRINT_STRING LPAREN value RPAREN SEMI
Rule 67    print -> K_PRINT_DOUBLE LPAREN value RPAREN SEMI
Rule 68    read -> K_READ_INTEGER LPAREN ID RPAREN SEMI
Rule 69    arguments -> arguments COMMA arguments
Rule 70    arguments -> value
Rule 71    arguments -> epsilon
Rule 72    function_call -> ID LPAREN arguments RPAREN
Rule 73    return -> K_RETURN value
Rule 74    return -> epsilon
Rule 75    return -> K_RETURN function_call
Rule 76    return -> K_RETURN assign
Rule 77    inc_dec -> INCREMENT
Rule 78    inc_dec -> DECREMENT
Rule 79    math -> expression
Rule 80    math -> factor inc_dec
Rule 81    expression -> expression PLUS term
Rule 82    expression -> expression MINUS term
Rule 83    expression -> term
Rule 84    term -> term TIMES factor
Rule 85    term -> term DIVIDE factor
Rule 86    term -> term MOD factor
Rule 87    term -> factor
Rule 88    term -> MINUS factor
Rule 89    factor -> LPAREN expression RPAREN
Rule 90    factor -> MINUS LPAREN expression RPAREN
Rule 91    factor -> ICONSTANT
Rule 92    factor -> DCONSTANT
Rule 93    factor -> ID
Rule 94    factor -> ID LBRACKET value RBRACKET
Rule 95    factor -> ID LBRACKET ID ICONSTANT RBRACKET
Rule 96    bool_op -> DAND
Rule 97    bool_op -> DOR
Rule 98    bool_op -> DEQ
Rule 99    bool_op -> GEQ
Rule 100   bool_op -> GT
Rule 101   bool_op -> LEQ
Rule 102   bool_op -> LT
Rule 103   bool_op -> NE
Rule 104   bool_op -> NOT
Rule 105   condition -> math bool_op math
Rule 106   condition -> function_call bool_op math
Rule 107   bool -> condition bool_op condition
Rule 108   bool -> condition
Rule 109   while -> K_WHILE LPAREN bool RPAREN statement
Rule 110   while -> K_WHILE LPAREN bool RPAREN LCURLY statements RCURLY
Rule 111   do_assign -> ID ASSIGN ICONSTANT
Rule 112   do -> K_DO LPAREN do_assign SEMI condition SEMI ID inc_dec RPAREN LCURLY statements RCURLY
Rule 113   do -> K_DO LPAREN do_assign SEMI condition SEMI ID inc_dec RPAREN statement
Rule 114   if -> K_IF LPAREN bool RPAREN K_THEN LCURLY statements RCURLY else_if
Rule 115   if -> K_IF LPAREN bool RPAREN K_THEN statement else_if
Rule 116   else_if -> K_ELSE K_IF LPAREN bool RPAREN K_THEN LCURLY statements RCURLY else
Rule 117   else_if -> K_ELSE K_IF LPAREN bool RPAREN K_THEN statement else
Rule 118   else_if -> else
Rule 119   else -> K_ELSE LCURLY statements RCURLY
Rule 120   else -> K_ELSE statement
Rule 121   else -> epsilon
Rule 122   epsilon -> <empty>

Terminals, with rules where they appear

ASSIGN               : 51 53 54 55 56 62 63 111
ASSIGN_DIVIDE        : 60
ASSIGN_MINUS         : 58
ASSIGN_MOD           : 61
ASSIGN_MULTIPLY      : 59
ASSIGN_PLUS          : 57
COMMA                : 17 47 47 48 49 50 64 69
COMMENT              : 
DAND                 : 96
DCONSTANT            : 20 92
DECREMENT            : 78
DEQ                  : 98
DIVIDE               : 85
DOR                  : 97
GEQ                  : 99
GT                   : 100
ICONSTANT            : 19 46 91 95 111
ID                   : 1 13 14 15 16 22 23 44 45 45 46 49 51 52 53 54 55 56 57 58 59 60 61 63 64 68 72 93 94 95 95 111 112 113
INCREMENT            : 77
KEYWORD              : 
K_DO                 : 112 113
K_DOUBLE             : 7
K_ELSE               : 116 117 119 120
K_EXIT               : 
K_FUNCTION           : 13
K_IF                 : 114 115 116 117
K_INTEGER            : 6
K_PRINT_DOUBLE       : 67
K_PRINT_INTEGER      : 65
K_PRINT_STRING       : 66
K_PROCEDURE          : 14
K_PROGRAM            : 1
K_READ_DOUBLE        : 
K_READ_INTEGER       : 68
K_READ_STRING        : 
K_RETURN             : 73 75 76
K_STRING             : 8
K_THEN               : 114 115 116 117
K_WHILE              : 109 110
LBRACKET             : 16 23 45 46 54 55 94 95
LCURLY               : 1 13 14 110 112 114 116 119
LEQ                  : 101
LPAREN               : 13 14 65 66 67 68 72 89 90 109 110 112 113 114 115 116 117
LT                   : 102
MINUS                : 82 88 90
MOD                  : 86
NE                   : 103
NOT                  : 104
PERIOD               : 
PLUS                 : 81
RBRACKET             : 16 23 45 46 54 55 94 95
RCURLY               : 1 13 14 110 112 114 116 119
RPAREN               : 13 14 65 66 67 68 72 89 90 109 110 112 113 114 115 116 117
SCONSTANT            : 21 55
SEMI                 : 26 27 28 34 35 36 37 38 40 42 65 66 67 68 112 112 113 113
TIMES                : 84
error                : 

Nonterminals, with rules where they appear

arguments            : 69 69 72
assign               : 28 38 50 62 76
bool                 : 109 110 114 115 116 117
bool_op              : 105 106 107
condition            : 107 107 108 112 113
declare              : 26 36 49 50
declare_assign       : 27 37 64
do                   : 31
do_assign            : 112 113
else                 : 116 117 118
else_if              : 114 115
epsilon              : 5 12 24 43 71 74 121
expression           : 79 81 82 89 90
factor               : 47 47 47 48 48 80 84 85 86 87 88
function             : 3
function_call        : 34 40 56 75 106
function_statements  : 9 9 13
if                   : 32
inc_dec              : 52 80 112 113
math                 : 53 54 54 55 57 58 59 60 61 105 105 106
parameter            : 18
parameter_list       : 13 14 17 17
print                : 29 39
procedure            : 4 11
program              : 0
program_body         : 1 2 2
read                 : 33 41
return               : 35 42
scope                : 13 14
statement            : 109 113 115 117 120
statements           : 10 14 25 25 110 112 114 116 119
term                 : 81 82 83 84 85 86
type                 : 13 15 16 44 45 46 47 48 63
value                : 23 51 62 63 65 66 67 70 73 94
while                : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . K_PROGRAM ID LCURLY program_body RCURLY

    K_PROGRAM       shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> K_PROGRAM . ID LCURLY program_body RCURLY

    ID              shift and go to state 3


state 3

    (1) program -> K_PROGRAM ID . LCURLY program_body RCURLY

    LCURLY          shift and go to state 4


state 4

    (1) program -> K_PROGRAM ID LCURLY . program_body RCURLY
    (2) program_body -> . program_body program_body
    (3) program_body -> . function
    (4) program_body -> . procedure
    (5) program_body -> . epsilon
    (13) function -> . K_FUNCTION scope type ID LPAREN parameter_list RPAREN LCURLY function_statements RCURLY
    (14) procedure -> . K_PROCEDURE scope ID LPAREN parameter_list RPAREN LCURLY statements RCURLY
    (122) epsilon -> .

  ! shift/reduce conflict for K_FUNCTION resolved as shift
  ! shift/reduce conflict for K_PROCEDURE resolved as shift
    K_FUNCTION      shift and go to state 9
    K_PROCEDURE     shift and go to state 10
    RCURLY          reduce using rule 122 (epsilon -> .)

  ! K_FUNCTION      [ reduce using rule 122 (epsilon -> .) ]
  ! K_PROCEDURE     [ reduce using rule 122 (epsilon -> .) ]

    program_body                   shift and go to state 5
    function                       shift and go to state 6
    procedure                      shift and go to state 7
    epsilon                        shift and go to state 8

state 5

    (1) program -> K_PROGRAM ID LCURLY program_body . RCURLY
    (2) program_body -> program_body . program_body
    (2) program_body -> . program_body program_body
    (3) program_body -> . function
    (4) program_body -> . procedure
    (5) program_body -> . epsilon
    (13) function -> . K_FUNCTION scope type ID LPAREN parameter_list RPAREN LCURLY function_statements RCURLY
    (14) procedure -> . K_PROCEDURE scope ID LPAREN parameter_list RPAREN LCURLY statements RCURLY
    (122) epsilon -> .

  ! shift/reduce conflict for K_FUNCTION resolved as shift
  ! shift/reduce conflict for K_PROCEDURE resolved as shift
  ! shift/reduce conflict for RCURLY resolved as shift
    RCURLY          shift and go to state 12
    K_FUNCTION      shift and go to state 9
    K_PROCEDURE     shift and go to state 10

  ! K_FUNCTION      [ reduce using rule 122 (epsilon -> .) ]
  ! K_PROCEDURE     [ reduce using rule 122 (epsilon -> .) ]
  ! RCURLY          [ reduce using rule 122 (epsilon -> .) ]

    program_body                   shift and go to state 11
    function                       shift and go to state 6
    procedure                      shift and go to state 7
    epsilon                        shift and go to state 8

state 6

    (3) program_body -> function .

    RCURLY          reduce using rule 3 (program_body -> function .)
    K_FUNCTION      reduce using rule 3 (program_body -> function .)
    K_PROCEDURE     reduce using rule 3 (program_body -> function .)


state 7

    (4) program_body -> procedure .

    RCURLY          reduce using rule 4 (program_body -> procedure .)
    K_FUNCTION      reduce using rule 4 (program_body -> procedure .)
    K_PROCEDURE     reduce using rule 4 (program_body -> procedure .)


state 8

    (5) program_body -> epsilon .

    RCURLY          reduce using rule 5 (program_body -> epsilon .)
    K_FUNCTION      reduce using rule 5 (program_body -> epsilon .)
    K_PROCEDURE     reduce using rule 5 (program_body -> epsilon .)


state 9

    (13) function -> K_FUNCTION . scope type ID LPAREN parameter_list RPAREN LCURLY function_statements RCURLY
    (12) scope -> . epsilon
    (122) epsilon -> .

    K_INTEGER       reduce using rule 122 (epsilon -> .)
    K_DOUBLE        reduce using rule 122 (epsilon -> .)
    K_STRING        reduce using rule 122 (epsilon -> .)

    scope                          shift and go to state 13
    epsilon                        shift and go to state 14

state 10

    (14) procedure -> K_PROCEDURE . scope ID LPAREN parameter_list RPAREN LCURLY statements RCURLY
    (12) scope -> . epsilon
    (122) epsilon -> .

    ID              reduce using rule 122 (epsilon -> .)

    scope                          shift and go to state 15
    epsilon                        shift and go to state 14

state 11

    (2) program_body -> program_body program_body .
    (2) program_body -> program_body . program_body
    (2) program_body -> . program_body program_body
    (3) program_body -> . function
    (4) program_body -> . procedure
    (5) program_body -> . epsilon
    (13) function -> . K_FUNCTION scope type ID LPAREN parameter_list RPAREN LCURLY function_statements RCURLY
    (14) procedure -> . K_PROCEDURE scope ID LPAREN parameter_list RPAREN LCURLY statements RCURLY
    (122) epsilon -> .

  ! shift/reduce conflict for K_FUNCTION resolved as shift
  ! shift/reduce conflict for K_PROCEDURE resolved as shift
  ! shift/reduce conflict for K_FUNCTION resolved as shift
  ! shift/reduce conflict for K_PROCEDURE resolved as shift
  ! reduce/reduce conflict for RCURLY resolved using rule 2 (program_body -> program_body program_body .)
    RCURLY          reduce using rule 2 (program_body -> program_body program_body .)
    K_FUNCTION      shift and go to state 9
    K_PROCEDURE     shift and go to state 10

  ! K_FUNCTION      [ reduce using rule 2 (program_body -> program_body program_body .) ]
  ! K_PROCEDURE     [ reduce using rule 2 (program_body -> program_body program_body .) ]
  ! K_FUNCTION      [ reduce using rule 122 (epsilon -> .) ]
  ! K_PROCEDURE     [ reduce using rule 122 (epsilon -> .) ]
  ! RCURLY          [ reduce using rule 122 (epsilon -> .) ]

    program_body                   shift and go to state 11
    function                       shift and go to state 6
    procedure                      shift and go to state 7
    epsilon                        shift and go to state 8

state 12

    (1) program -> K_PROGRAM ID LCURLY program_body RCURLY .

    $end            reduce using rule 1 (program -> K_PROGRAM ID LCURLY program_body RCURLY .)


state 13

    (13) function -> K_FUNCTION scope . type ID LPAREN parameter_list RPAREN LCURLY function_statements RCURLY
    (6) type -> . K_INTEGER
    (7) type -> . K_DOUBLE
    (8) type -> . K_STRING

    K_INTEGER       shift and go to state 17
    K_DOUBLE        shift and go to state 18
    K_STRING        shift and go to state 19

    type                           shift and go to state 16

state 14

    (12) scope -> epsilon .

    K_INTEGER       reduce using rule 12 (scope -> epsilon .)
    K_DOUBLE        reduce using rule 12 (scope -> epsilon .)
    K_STRING        reduce using rule 12 (scope -> epsilon .)
    ID              reduce using rule 12 (scope -> epsilon .)


state 15

    (14) procedure -> K_PROCEDURE scope . ID LPAREN parameter_list RPAREN LCURLY statements RCURLY

    ID              shift and go to state 20


state 16

    (13) function -> K_FUNCTION scope type . ID LPAREN parameter_list RPAREN LCURLY function_statements RCURLY

    ID              shift and go to state 21


state 17

    (6) type -> K_INTEGER .

    ID              reduce using rule 6 (type -> K_INTEGER .)
    LPAREN          reduce using rule 6 (type -> K_INTEGER .)
    MINUS           reduce using rule 6 (type -> K_INTEGER .)
    ICONSTANT       reduce using rule 6 (type -> K_INTEGER .)
    DCONSTANT       reduce using rule 6 (type -> K_INTEGER .)


state 18

    (7) type -> K_DOUBLE .

    ID              reduce using rule 7 (type -> K_DOUBLE .)
    LPAREN          reduce using rule 7 (type -> K_DOUBLE .)
    MINUS           reduce using rule 7 (type -> K_DOUBLE .)
    ICONSTANT       reduce using rule 7 (type -> K_DOUBLE .)
    DCONSTANT       reduce using rule 7 (type -> K_DOUBLE .)


state 19

    (8) type -> K_STRING .

    ID              reduce using rule 8 (type -> K_STRING .)
    LPAREN          reduce using rule 8 (type -> K_STRING .)
    MINUS           reduce using rule 8 (type -> K_STRING .)
    ICONSTANT       reduce using rule 8 (type -> K_STRING .)
    DCONSTANT       reduce using rule 8 (type -> K_STRING .)


state 20

    (14) procedure -> K_PROCEDURE scope ID . LPAREN parameter_list RPAREN LCURLY statements RCURLY

    LPAREN          shift and go to state 22


state 21

    (13) function -> K_FUNCTION scope type ID . LPAREN parameter_list RPAREN LCURLY function_statements RCURLY

    LPAREN          shift and go to state 23


state 22

    (14) procedure -> K_PROCEDURE scope ID LPAREN . parameter_list RPAREN LCURLY statements RCURLY
    (17) parameter_list -> . parameter_list COMMA parameter_list
    (18) parameter_list -> . parameter
    (15) parameter -> . type ID
    (16) parameter -> . type ID LBRACKET RBRACKET
    (24) parameter -> . epsilon
    (6) type -> . K_INTEGER
    (7) type -> . K_DOUBLE
    (8) type -> . K_STRING
    (122) epsilon -> .

    K_INTEGER       shift and go to state 17
    K_DOUBLE        shift and go to state 18
    K_STRING        shift and go to state 19
    RPAREN          reduce using rule 122 (epsilon -> .)
    COMMA           reduce using rule 122 (epsilon -> .)
